# rust-driving-game

./: Cargo.toml
assets/: finish-line-64x64.tga
bevy/: Cargo.toml
bevy/src/: debug_grid.rs  main.rs
game-core/: Cargo.toml
game-core/src/: car.rs  car_progress.rs  coordinates.rs  default_tracks.rs  gameloop.rs  input.rs  lib.rs  main.rs  track.rs
src/: car.rs  coordinates.rs  debug_grid.rs  game_state.rs  input.rs  lib.rs  main.rs  track.rs
