[package]
name = "rust-driving-game-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
#bevy_ninepatch = "0.10.0"
bevy_debug_grid = "0.4.0"
bevy_nine_slice_ui = "0.5.0"
rust-driving-game-core = {path = "../game-core"}

